<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/usernameTextView"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/selectIconTextView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="130dp"
                android:layout_weight="1"
                android:text="@string/selectIconTextView"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <GridLayout
                android:layout_width="380dp"
                android:layout_height="200dp"
                android:layout_marginLeft="4dp"
                android:columnCount="5"
                android:rowCount="2">

                <ImageView
                    android:id="@+id/granny"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_column="4"
                    android:layout_marginTop="10dp"
                    android:layout_row="1"
                    app:srcCompat="@drawable/granny" />

                <ImageView
                    android:id="@+id/blackWoman"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_column="3"
                    android:layout_marginTop="10dp"
                    android:layout_row="1"
                    app:srcCompat="@drawable/woman4" />

                <ImageView
                    android:id="@+id/whiteWoman"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_column="2"
                    android:layout_marginTop="10dp"
                    android:layout_row="1"
                    app:srcCompat="@drawable/woman3" />

                <ImageView
                    android:id="@+id/lilGirl2"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_column="1"
                    android:layout_marginTop="10dp"
                    android:layout_row="1"
                    app:srcCompat="@drawable/blckgirl" />

                <ImageView
                    android:id="@+id/lilGirl"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_column="0"
                    android:layout_marginTop="10dp"
                    android:layout_row="1"
                    app:srcCompat="@drawable/girl" />

                <ImageView
                    android:id="@+id/blackMan"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_column="4"
                    android:layout_row="0"
                    app:srcCompat="@drawable/man2" />

                <ImageView
                    android:id="@+id/whiteMan"
                    android:layout_width="67dp"
                    android:layout_height="70dp"
                    android:layout_column="3"
                    android:layout_row="0"
                    app:srcCompat="@drawable/man" />

                <ImageView
                    android:id="@+id/blackBoy"
                    android:layout_width="69dp"
                    android:layout_height="69dp"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/blackboy" />

                <ImageView
                    android:id="@+id/nerdyBoy"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/nerdyboy" />

                <ImageView
                    android:id="@+id/whiteBoy"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_column="2"
                    android:layout_row="0"
                    android:layout_weight="1"
                    android:visibility="visible"
                    app:srcCompat="@drawable/boy" />
            </GridLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/createNewUserButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="110dp"
                android:layout_marginRight="110dp"
                android:layout_weight="1"
                android:text="@string/createNewUserButton"
                android:textColor="#d4f142ab"
                android:textSize="18sp"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
